--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@helixml/chat-embed",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "dist/chat-widget.iife.js",
   "files": [
     "dist"
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@helixml/chat-widget": "^0.2.0",
+    "@types/node": "^20.12.7",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0"
   },
